solve vertical align issue

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -466,7 +466,6 @@ height: 100%;
 }
 
 .vcenter {
-    display: inline-block;
-    vertical-align: middle;
-    float: none;
+    display: flex;
+    align-items: center;
 }
